# OTIS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
data_contracts/: capture_flags_v1.md  count_observations_v1.csv.md  dac_steps_v1.csv.md  derived_intervals_v1.csv.md  health_v1.csv.md  raw_events_v1.csv.md  reference_observations_v1.csv.md
docs/00_FOUNDATIONS/: ENGINEERING_CULTURE.md  OTIS_ARCHITECTURE_OVERVIEW.md  OTIS_DESIGN_PRINCIPLES.md  OTIS_GLOSSARY.md  OTIS_GPSDO_Design_Lessons.md  OTIS_NON_GOALS.md  OTIS_REFERENCE_TERMINOLOGY.md  OTIS_VISION.md
docs/10_REFERENCE_ARCHITECTURE/: ARCHITECTURE_DIAGRAMS.md  CORE_PARTITIONING.md  REFERENCE_SIGNAL_MODEL.md  TIMESTAMPING_MODEL.md
docs/20_TELEMETRY/: ENVIRONMENTAL_TELEMETRY.md  TELEMETRY_EVENT_TAXONOMY.md  TELEMETRY_PHILOSOPHY.md  canonical_event_model.md
docs/30_ANALYSIS/: ALLAN_DEVIATION.md
docs/40_HARDWARE/: H1_STEERABLE_OSCILLATOR_PREP.md  HARDWARE_DEVELOPMENT_STAGES.md  MVP_ASCII_WIRING_DIAGRAM.md  MVP_HARDWARE_REFERENCE.md  NANO_RP2040_CLOCK_PIN_STRATEGY.md  PULSE_INPUT_FRONT_END.md  RP2040_Other_Capabilities.md  (+1 more)
firmware/rp2040/: CMakeLists.txt  README.md
firmware/rp2040/src/: capture_pio.pio  main.c  otis_boot_diag.h  otis_emit.c  otis_protocol.h  transport_core.c
profiles/: generic_tic.yaml  h0_reference.yaml  pendulum_synchronome.yaml
runs/: README.md  processing.txt
schemas/: README.md
tests/: test_capture_device.py  test_h1_characterize.py  test_init_run.py  test_otis_wire_validate.py  test_run_tools.py  test_serial_commands.py
tools/: otis_wire_validate.py
(+190 files in other folders)
